--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,8 @@
         <module>service-product</module>
         <module>service-activity</module>
         <module>service-item</module>
+        <module>service-list</module>
+        <module>service-user</module>
     </modules>
 
     <properties>
@@ -83,10 +85,10 @@
         </dependency>
 
         <!--链路追踪-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
+        </dependency>-->
 
 
     </dependencies>
